fix: HeaderCTA height overflow

--- a/src/components/HeaderCta/HeaderCta.scss
+++ b/src/components/HeaderCta/HeaderCta.scss
@@ -2,9 +2,13 @@
 
 
 .header-cta {
-    height: auto;
-    position: relative;
     width: 100%;
+
+    .header-cta_wrapper {
+        position:fixed;
+        top:0;
+        margin: 0 auto;
+    }
 
     svg {
         position: relative;
@@ -16,54 +20,56 @@
             margin: 0 auto;
         }
     }
-
+    
     figure {
-        height: auto;
         margin: 0;
         width: 100%;
 
         @include for-phone-only {
-            margin-top: to-rem($size-key * -20);
+            margin-top: to-rem($size-key * 60)
         }
-        
         @include for-tablet-portrait-up {
-            position: absolute;
-            top:0;
-            z-index: 888;
-            
+            opacity: 0.5;
+        }
+        @include for-desktop-up {
+            opacity: 1;
         }
     }
     .header-cta_info {
-        padding-bottom: to-rem($size-key * 9);
-        position: relative;
-        z-index:999;
-
-        h1 {
-            text-shadow:
-            0 0 50px rgba(255, 255, 255, 0.8),
-            0 0 50px rgba(255, 255, 255, 0.8),
-            0 0 50px rgba(255, 255, 255, 0.8),
-        }
 
         @include for-phone-only {
             padding: 0 to-rem($size-key * 5);
-            a {
-                display: block;
-                margin: 0 auto;
-            }
-        }
-        
-        @include for-tablet-portrait-up {
-            padding-left: to-rem($size-key * 10);
         }
         
         @include for-tablet-landscape-up {
-            padding-left: to-rem($size-key * 30);
             padding-top: to-rem($size-key * 3);
-            
-            h1 {
+        }
+        @include for-desktop-up {
+            padding-left: to-rem($size-key * 30);
+        }
+
+        h1 {
+            text-shadow:
+            0 0 20px rgba(255, 255, 255, 0.5),
+            0 0 20px rgba(255, 255, 255, 0.5),
+            0 0 20px rgba(255, 255, 255, 0.5);
+
+            @include for-tablet-landscape-up {
                 max-width: 60%;
-              }
+            }
+        }
+        a{
+            @include for-phone-only {
+                display: block;
+                margin: 0 auto;
+            }
+            @include for-tablet-portrait-up {
+                display: block;
+                margin: 0 auto;
+            }
+            @include for-tablet-landscape-up {
+                display: inline;
+            }
         }
     }
 }
